// Этот файл написан первым делом перед тем, как писать в принципе любой код в этом сервисе
syntax = "proto3";

service User {
    rpc Auth (Credentials) returns (TokenPair) {};
    rpc Refresh(Claim) returns (TokenPair) {};
    
    rpc Register (Credentials) returns (TokenPair) {};
    rpc Modify (UserInfo) returns (Empty) {};
}

message UserInfo {
    string login = 1;
    string password = 2;
    bool admin = 3;
}

message Claim {
    string login = 1;
}

message Credentials {
    string login = 1;
    string password = 2;
}

message TokenPair {
    string refresh = 1;
    string auth = 2;
}

message Empty {
    // не хочу воевать с импортами
}